--- a/Frontend/contact_ngo.html
+++ b/Frontend/contact_ngo.html
@@ -42,10 +42,11 @@
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a href="index_ngo.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="about_ngo.html" class="nav-link">About</a></li>
+          <li class="nav-item "><a href="about_ngo.html" class="nav-link">About</a></li>
           <li class="nav-item"><a href="gallery_ngo.html" class="nav-link">Gallery</a></li>
           <li class="nav-item active"><a href="contact_ngo.html" class="nav-link">Contact</a></li>
           <li class="nav-item"><a href="ngolist_ngo.html" class="nav-link">NGO</a></li>
+          <li class="nav-item"><a href="Available_Volunteers.html" class="nav-link">Volunteers</a></li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">
@@ -63,7 +64,7 @@
               <i class="icon-user"></i>
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
-              <a class="dropdown-item" href="#">View Profile</a>
+              <a class="dropdown-item" href="Profile_ngo.html">View Profile</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="index.html" id="logoutLinkNavbar">Logout</a>
             </div>
