--- a/Frontend/donations_history_restaurant.html
+++ b/Frontend/donations_history_restaurant.html
@@ -97,15 +97,19 @@
                     <li class="nav-item"><a href="gallery_restaurant.html" class="nav-link">Gallery</a></li>
                     <li class="nav-item"><a href="contact_restaurant.html" class="nav-link">Contact</a></li>
                     <li class="nav-item"><a href="ngolist_restaurant.html" class="nav-link">NGO</a></li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item"><a href="restaurant_donate.html" class="nav-link">Donate</a></li>
+                    <li class="nav-item dropdown active">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Donations
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="pending_donations_restaurant.html">Incoming Donations</a></li>
-                            <li><a class="dropdown-item" href="accepted_donations_restaurant.html">Accepted Donations</a></li>
-                            <li><a class="dropdown-item" href="donations_history_restaurant.html">Donations History</a></li>
+                            <li><a class="dropdown-item" href="pending_donations_restaurant.html">Pending Donations</a>
+                            </li>
+                            <li><a class="dropdown-item" href="accepted_donations_restaurant.html">Accepted
+                                    Donations</a></li>
+                            <li><a class="dropdown-item" href="donations_history_restaurant.html">Donations History</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -114,7 +118,7 @@
                             <i class="icon-user"></i>
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
-                            <a class="dropdown-item" href="#">View Profile</a>
+                            <a class="dropdown-item" href="Profile_restaurant.html">View Profile</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="index.html" id="logoutLinkNavbar">Logout</a>
                         </div>
@@ -128,54 +132,55 @@
     <div id="foodTransactionsContainer" class="container" style="margin-top: 6rem"></div>
 
     <div class="modal fade" id="acceptFormModal" tabindex="-1" role="dialog" aria-labelledby="acceptFormModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="acceptFormModalLabel">Accept Distribution Form</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <p><strong>NGO Name:</strong> <span id="NameOfNGO"></span></p>
-                <p><strong>People Served:</strong> <span id="modalPeopleServed"></span></p>
-                <p><strong>Volunteer Phones:</strong> <span id="modalVolunteerPhones"></span></p>
-                <p><strong>Description:</strong> <span id="modalDescription"></span></p>
-                <p><strong>Review Notes:</strong> <span id="modalReviewNotes"></span></p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="acceptFormModalLabel">Accept Distribution Form</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p><strong>NGO Name:</strong> <span id="NameOfNGO"></span></p>
+                    <p><strong>People Served:</strong> <span id="modalPeopleServed"></span></p>
+                    <p><strong>Volunteer Phones:</strong> <span id="modalVolunteerPhones"></span></p>
+                    <p><strong>Description:</strong> <span id="modalDescription"></span></p>
+                    <p><strong>Review Notes:</strong> <span id="modalReviewNotes"></span></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
     </div>
-    </div>
 
-<!-- Photo Modal -->
-<div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-labelledby="photoModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-header" style="justify-content: center;">
-                <h5 class="modal-title" id="photoModalLabel">Photos</h5>
-            </div>
-            <div class="modal-body">
-                <div class="photo-container">
-                    <div class="photo-tile"></div>
+    <!-- Photo Modal -->
+    <div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-labelledby="photoModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header" style="justify-content: center;">
+                    <h5 class="modal-title" id="photoModalLabel">Photos</h5>
                 </div>
-                <div class="text-center mt-3">
-                    <button type="button" class="btn btn-secondary btn-previous-photo">Previous</button>
-                    <button type="button" class="btn btn-secondary btn-next-photo ml-2">Next</button>
+                <div class="modal-body">
+                    <div class="photo-container">
+                        <div class="photo-tile"></div>
+                    </div>
+                    <div class="text-center mt-3">
+                        <button type="button" class="btn btn-secondary btn-previous-photo">Previous</button>
+                        <button type="button" class="btn btn-secondary btn-next-photo ml-2">Next</button>
+                    </div>
                 </div>
-            </div>
-            <div class="modal-footer" style="justify-content: center;">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <div class="modal-footer" style="justify-content: center;">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <script>
         const BACKEND_URL = "http://localhost:3000";
@@ -192,7 +197,7 @@
                 });
                 if (response.status !== 200) {
                     const data = await response.json();
-                    alert(`Error: ${data.message}`); 
+                    alert(`Error: ${data.message}`);
                     return;
                 }
                 foodTransactions = await response.json(); // Assign fetched data to global variable
@@ -246,7 +251,7 @@
             }
 
             // Populate modal with transaction details
-            
+
             document.getElementById('NameOfNGO').textContent = transaction.ngo;
             document.getElementById('modalDescription').textContent = transaction.description;
             document.getElementById('modalPeopleServed').textContent = transaction.peopleServed;
