--- a/Frontend/food_transations_ngo.html
+++ b/Frontend/food_transations_ngo.html
@@ -79,43 +79,44 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
         <div class="container">
-          <a class="navbar-brand" href="index.html">Welfare</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
-            aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="oi oi-menu"></span> Menu
-          </button>
-    
-          <div class="collapse navbar-collapse" id="ftco-nav">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item"><a href="index_ngo.html" class="nav-link">Home</a></li>
-              <li class="nav-item "><a href="about_ngo.html" class="nav-link">About</a></li>
-              <li class="nav-item"><a href="gallery_ngo.html" class="nav-link">Gallery</a></li>
-              <li class="nav-item"><a href="contact_ngo.html" class="nav-link">Contact</a></li>
-              <li class="nav-item"><a href="ngolist_ngo.html" class="nav-link">NGO</a></li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                  aria-expanded="false">
-                  Donations
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="food_transations_ngo.html">Incoming Donations</a></li>
-                  <li><a class="dropdown-item" href="accepted_donations_ngo.html">Accepted Donations</a></li>
-                  <li><a class="dropdown-item" href="donations_history_ngo.html">Donations History</a></li>
+            <a class="navbar-brand" href="index.html">Welfare</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
+                aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="oi oi-menu"></span> Menu
+            </button>
+
+            <div class="collapse navbar-collapse" id="ftco-nav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a href="index_ngo.html" class="nav-link">Home</a></li>
+                    <li class="nav-item "><a href="about_ngo.html" class="nav-link">About</a></li>
+                    <li class="nav-item"><a href="gallery_ngo.html" class="nav-link">Gallery</a></li>
+                    <li class="nav-item"><a href="contact_ngo.html" class="nav-link">Contact</a></li>
+                    <li class="nav-item"><a href="ngolist_ngo.html" class="nav-link">NGO</a></li>
+                    <li class="nav-item"><a href="Available_Volunteers.html" class="nav-link">Volunteers</a></li>
+                    <li class="nav-item dropdown active">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Donations
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="food_transations_ngo.html">Incoming Donations</a></li>
+                            <li><a class="dropdown-item" href="accepted_donations_ngo.html">Accepted Donations</a></li>
+                            <li><a class="dropdown-item" href="donations_history_ngo.html">Donations History</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="icon-user"></i>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
+                            <a class="dropdown-item" href="Profile_ngo.html">View Profile</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="index.html" id="logoutLinkNavbar">Logout</a>
+                        </div>
+                    </li>
                 </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-toggle="dropdown"
-                  aria-haspopup="true" aria-expanded="false">
-                  <i class="icon-user"></i>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
-                  <a class="dropdown-item" href="#">View Profile</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="index.html" id="logoutLinkNavbar">Logout</a>
-                </div>
-              </li>
-            </ul>
-          </div>
+            </div>
         </div>
     </nav>
     <!-- END nav -->
@@ -125,7 +126,8 @@
     </div>
 
     <!-- Photo Modal -->
-    <div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-labelledby="photoModalLabel" aria-hidden="true">
+    <div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-labelledby="photoModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
             <div class="modal-content" style="align-items: center;">
                 <div class="modal-header">
@@ -163,10 +165,10 @@
                         'Authorization': token
                     }
                 });
-                
+
                 const data = await response.json();
                 if (response.status !== 200) {
-                    alert(`Error: ${data.message}`); 
+                    alert(`Error: ${data.message}`);
                     return;
                 }
                 createDonationCards(data);
@@ -229,12 +231,12 @@
                         'Content-Type': 'application/json',
                         'Authorization': token
                     },
-                    body: JSON.stringify({transactionId}),
+                    body: JSON.stringify({ transactionId }),
                 });
                 console.log(response);
 
-                if(response.status == 200)
-                alert('Donation claimed successfully');
+                if (response.status == 200)
+                    alert('Donation claimed successfully');
 
                 const card = button.closest('.card');
                 card.remove();
