--- a/Frontend/gallery_Ind.html
+++ b/Frontend/gallery_Ind.html
@@ -53,13 +53,14 @@
               <i class="icon-user"></i>
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
-              <a class="dropdown-item" href="#">View Profile</a>
+              <a class="dropdown-item" href="Profile_Ind.html">View Profile</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="index.html" id="logoutLinkNavbar">Logout</a>
             </div>
           </li>
         </ul>
       </div>
+    </div>
   </nav>
   <!-- END nav -->
 
