--- a/Frontend/index_restaurant.html
+++ b/Frontend/index_restaurant.html
@@ -58,7 +58,7 @@
               <li><a class="dropdown-item" href="donations_history_restaurant.html">Donations History</a></li>
             </ul>
           </li>
-          <li class="nav-item dropdown active">
+          <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="icon-user"></i>
