--- a/Frontend/restaurant_donate.html
+++ b/Frontend/restaurant_donate.html
@@ -44,7 +44,7 @@
         <span class="oi oi-menu"></span> Menu
       </button>
 
-      <div class="collapse navbar-collapse" id="ftco-nav">
+      <div class="collapse navbar-collapse active" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a href="index_restaurant.html" class="nav-link">Home</a></li>
           <li class="nav-item"><a href="about_restaurant.html" class="nav-link">About</a></li>
@@ -52,8 +52,27 @@
           <li class="nav-item"><a href="contact_restaurant.html" class="nav-link">Contact</a></li>
           <li class="nav-item"><a href="ngolist_restaurant.html" class="nav-link">NGO</a></li>
           <li class="nav-item active"><a href="restaurant_donate.html" class="nav-link">Donate</a></li>
-          <li class="nav-item">
-            <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Donations
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="pending_donations_restaurant.html">Pending Donations</a></li>
+              <li><a class="dropdown-item" href="accepted_donations_restaurant.html">Accepted Donations</a></li>
+              <li><a class="dropdown-item" href="donations_history_restaurant.html">Donations History</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              <i class="icon-user"></i>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
+              <a class="dropdown-item" href="Profile_restaurant.html">View Profile</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="index.html" id="logoutLinkNavbar">Logout</a>
+            </div>
           </li>
         </ul>
       </div>
@@ -346,6 +365,25 @@
         });
       </script>
       <script src="js/ngo_cards.js"></script>
+      <script src="js/ngo_cards.js"></script>
+      <script src="js/jquery.min.js"></script>
+      <script src="js/jquery-migrate-3.0.1.min.js"></script>
+      <script src="js/popper.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+      <script src="js/jquery.easing.1.3.js"></script>
+      <script src="js/jquery.waypoints.min.js"></script>
+      <script src="js/jquery.stellar.min.js"></script>
+      <script src="js/owl.carousel.min.js"></script>
+      <script src="js/jquery.magnific-popup.min.js"></script>
+      <script src="js/aos.js"></script>
+      <script src="js/jquery.animateNumber.min.js"></script>
+      <script src="js/bootstrap-datepicker.js"></script>
+      <script src="js/jquery.timepicker.min.js"></script>
+      <script src="js/scrollax.min.js"></script>
+      <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+      <script src="js/google-map.js"></script>
+      <script src="js/main.js"></script>
 </body>
 
 </html>
