forgot password issue resolved

--- a/Frontend/Forgot_Password.html
+++ b/Frontend/Forgot_Password.html
@@ -227,8 +227,14 @@
         
             async function sendOTP() {
                 const userType = document.getElementById("user-type").value;
-                const email = document.getElementById("email").value;
-
+                let email;
+                if (userType === "restaurant") {
+                    email = document.getElementById("username").value;
+                }
+                else{
+                    email = document.getElementById("email").value;
+                }
+                
                 try {
                     const response = await fetch(`${BACKEND_URL}/reset/sendmail`, {
                         method: "POST",
@@ -257,7 +263,13 @@
             async function verifyOTP() {
                 const userType = document.getElementById("user-type").value;
                 const otp = document.getElementById("otp").value;
-                const email = document.getElementById("email").value;
+                let email;
+                if (userType === "restaurant") {
+                    email = document.getElementById("username").value;
+                }
+                else{
+                    email = document.getElementById("email").value;
+                }
                 try {
                     const response = await fetch(`${BACKEND_URL}/reset/checkotp`, {
                         method: "POST",
