--- a/Frontend/accepted_donations_restaurant.html
+++ b/Frontend/accepted_donations_restaurant.html
@@ -216,6 +216,69 @@
         </div>
     </div>
 
+    <footer class="ftco-footer ftco-section img" style="height: 25rem;">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row mb-1">
+                <div class="col-md-3">
+                    <div class="ftco-footer-widget mb-4">
+                        <h2 class="ftco-heading-2">About Us</h2>
+                        <p style="color: white;">We are dedicated to redistributing surplus food to those in need,
+                            minimizing waste, and
+                            helping our community. Learn more about our mission and how you can get involved.</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="ftco-footer-widget mb-4" style="color: white; margin-left: 2rem;">
+                        <h2 class="ftco-heading-2">Our Services</h2>
+                        <ul class="list-unstyled">
+                            <li><span class="icon icon-check"></span> Collaboaration</li>
+                            <li><span class="icon icon-check"></span> Support Network</li>
+                            <li><span class="icon icon-check"></span> Volunteer Opportunities</li>
+                            <li><span class="icon icon-check"></span> Community Interactions</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="ftco-footer-widget mb-4">
+                        <h2 class="ftco-heading-2">Testimonials</h2>
+                        <div class="block-21 mb-4 d-flex">
+                            <div class="text">
+                                <h3 class="heading" style="color: white;">"This organization has changed my life!" -
+                                    Jane Doe
+                                </h3>
+                            </div>
+                        </div>
+                        <div class="block-21 mb-4 d-flex">
+                            <div class="text">
+                                <h3 class="heading" style="color: white;">"Incredible impact on our community." - John
+                                    Smith
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="ftco-footer-widget mb-4">
+                        <h2 class="ftco-heading-2">Have a Questions?</h2>
+                        <div class="block-23 mb-3">
+                            <ul>
+                                <li><span class="icon icon-map-marker"></span><span class="text"
+                                        style="color: white;">203 Fake St. Mountain
+                                        View, San Francisco, California, USA</span></li>
+                                <li><span class="icon icon-phone"></span><span class="text" style="color: white;">+2 392
+                                        3929
+                                        210</span></li>
+                                <li><span class="icon icon-envelope"></span><span class="text"
+                                        style="color: white;">info@yourdomain.com</span></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <script>
         const BACKEND_URL = "http://localhost:3000"; // Update this with your actual backend URL
 
