--- a/Frontend/donation_histroy_admin.html
+++ b/Frontend/donation_histroy_admin.html
@@ -139,54 +139,55 @@
     <div id="foodTransactionsContainer" class="container" style="margin-top: 6rem"></div>
 
     <div class="modal fade" id="acceptFormModal" tabindex="-1" role="dialog" aria-labelledby="acceptFormModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="acceptFormModalLabel">Accept Distribution Form</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <p><strong>NGO Name:</strong> <span id="NameOfNGO"></span></p>
-                <p><strong>People Served:</strong> <span id="modalPeopleServed"></span></p>
-                <p><strong>Volunteer Phones:</strong> <span id="modalVolunteerPhones"></span></p>
-                <p><strong>Description:</strong> <span id="modalDescription"></span></p>
-                <p><strong>Review Notes:</strong> <span id="modalReviewNotes"></span></p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="acceptFormModalLabel">Accept Distribution Form</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p><strong>NGO Name:</strong> <span id="NameOfNGO"></span></p>
+                    <p><strong>People Served:</strong> <span id="modalPeopleServed"></span></p>
+                    <p><strong>Volunteer Phones:</strong> <span id="modalVolunteerPhones"></span></p>
+                    <p><strong>Description:</strong> <span id="modalDescription"></span></p>
+                    <p><strong>Review Notes:</strong> <span id="modalReviewNotes"></span></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
     </div>
-    </div>
 
-<!-- Photo Modal -->
-<div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-labelledby="photoModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-header" style="justify-content: center;">
-                <h5 class="modal-title" id="photoModalLabel">Photos</h5>
-            </div>
-            <div class="modal-body">
-                <div class="photo-container">
-                    <div class="photo-tile"></div>
+    <!-- Photo Modal -->
+    <div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-labelledby="photoModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header" style="justify-content: center;">
+                    <h5 class="modal-title" id="photoModalLabel">Photos</h5>
                 </div>
-                <div class="text-center mt-3">
-                    <button type="button" class="btn btn-secondary btn-previous-photo">Previous</button>
-                    <button type="button" class="btn btn-secondary btn-next-photo ml-2">Next</button>
+                <div class="modal-body">
+                    <div class="photo-container">
+                        <div class="photo-tile"></div>
+                    </div>
+                    <div class="text-center mt-3">
+                        <button type="button" class="btn btn-secondary btn-previous-photo">Previous</button>
+                        <button type="button" class="btn btn-secondary btn-next-photo ml-2">Next</button>
+                    </div>
                 </div>
-            </div>
-            <div class="modal-footer" style="justify-content: center;">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <div class="modal-footer" style="justify-content: center;">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <script>
         const BACKEND_URL = "http://localhost:3000";
@@ -203,7 +204,7 @@
                 });
                 if (response.status !== 200) {
                     const data = await response.json();
-                    alert(`Error: ${data.message}`); 
+                    alert(`Error: ${data.message}`);
                     return;
                 }
                 foodTransactions = await response.json();
@@ -257,7 +258,7 @@
             }
 
             // Populate modal with transaction details
-            
+
             document.getElementById('NameOfNGO').textContent = transaction.ngo;
             document.getElementById('modalDescription').textContent = transaction.description;
             document.getElementById('modalPeopleServed').textContent = transaction.peopleServed;
@@ -318,74 +319,46 @@
             });
         });
     </script>
-    <footer class="ftco-footer ftco-section img">
+    <footer class="ftco-footer ftco-section img" style="height: 25rem;">
         <div class="overlay"></div>
         <div class="container">
-            <div class="row mb-5">
+            <div class="row mb-1">
                 <div class="col-md-3">
                     <div class="ftco-footer-widget mb-4">
                         <h2 class="ftco-heading-2">About Us</h2>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                            there live the
-                            blind texts.</p>
-                        <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                            <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                            <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                            <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-                        </ul>
+                        <p style="color: white;">We are dedicated to redistributing surplus food to those in need,
+                            minimizing waste, and
+                            helping our community. Learn more about our mission and how you can get involved.</p>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Recent Blog</h2>
-                        <div class="block-21 mb-4 d-flex">
-                            <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
-                            <div class="text">
-                                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a>
-                                </h3>
-                                <div class="meta">
-                                    <div><a href="#"><span class="icon-calendar"></span> July 12, 2018</a></div>
-                                    <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-                                    <div><a href="#"><span class="icon-chat"></span> 19</a></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="block-21 mb-4 d-flex">
-                            <a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
-                            <div class="text">
-                                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a>
-                                </h3>
-                                <div class="meta">
-                                    <div><a href="#"><span class="icon-calendar"></span> July 12, 2018</a></div>
-                                    <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-                                    <div><a href="#"><span class="icon-chat"></span> 19</a></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="ftco-footer-widget mb-4 ml-md-4">
-                        <h2 class="ftco-heading-2">Site Links</h2>
+                <div class="col-md-3">
+                    <div class="ftco-footer-widget mb-4" style="color: white; margin-left: 2rem;">
+                        <h2 class="ftco-heading-2">Our Services</h2>
                         <ul class="list-unstyled">
-                            <li class="nav-item"><a href="index_ngo.html" class="nav-link">Home</a></li>
-                            <li class="nav-item"><a href="about_ngo.html" class="nav-link">About</a></li>
-                            <li class="nav-item"><a href="gallery_ngo.html" class="nav-link">Gallery</a></li>
-                            <li class="nav-item"><a href="contact_ngo.html" class="nav-link">Contact</a></li>
-                            <li class="nav-item"><a href="ngolist_ngo.html" class="nav-link">NGO</a></li>
-                            <li class="nav-item"><a href="volunteer_find.html" class="nav-link">Volunteers</a></li>
-                            <li class="nav-item active"><a href="food_transations_ngo.html"
-                                    class="nav-link">Donations</a></li>
-                            <li class="nav-item"><a href="accepted_donations_ngo.html" class="nav-link">Accepted
-                                    Donations</a>
-                            </li>
-                            <li class="nav-item"><a href="donations_history_ngo.html" class="nav-link">Donations
-                                    History</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
-                            </li>
+                            <li><span class="icon icon-check"></span> Collaboaration</li>
+                            <li><span class="icon icon-check"></span> Support Network</li>
+                            <li><span class="icon icon-check"></span> Volunteer Opportunities</li>
+                            <li><span class="icon icon-check"></span> Community Interactions</li>
                         </ul>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="ftco-footer-widget mb-4">
+                        <h2 class="ftco-heading-2">Testimonials</h2>
+                        <div class="block-21 mb-4 d-flex">
+                            <div class="text">
+                                <h3 class="heading" style="color: white;">"This organization has changed my life!" -
+                                    Jane Doe
+                                </h3>
+                            </div>
+                        </div>
+                        <div class="block-21 mb-4 d-flex">
+                            <div class="text">
+                                <h3 class="heading" style="color: white;">"Incredible impact on our community." - John
+                                    Smith
+                                </h3>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-3">
@@ -393,29 +366,17 @@
                         <h2 class="ftco-heading-2">Have a Questions?</h2>
                         <div class="block-23 mb-3">
                             <ul>
-                                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain
-                                        View, San
-                                        Francisco, California, USA</span></li>
-                                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929
-                                            210</span></a></li>
-                                <li><a href="#"><span class="icon icon-envelope"></span><span
-                                            class="text">info@yourdomain.com</span></a></li>
+                                <li><span class="icon icon-map-marker"></span><span class="text"
+                                        style="color: white;">203 Fake St. Mountain
+                                        View, San Francisco, California, USA</span></li>
+                                <li><span class="icon icon-phone"></span><span class="text" style="color: white;">+2 392
+                                        3929
+                                        210</span></li>
+                                <li><span class="icon icon-envelope"></span><span class="text"
+                                        style="color: white;">info@yourdomain.com</span></li>
                             </ul>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 text-center">
-
-                    <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        Copyright &copy;
-                        <script>document.write(new Date().getFullYear());</script> All rights reserved | This template
-                        is made with
-                        <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
-                            target="_blank">Colorlib</a>
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    </p>
                 </div>
             </div>
         </div>
